--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,8 +1,6 @@
 configfile: "config/config.json"
 
 shadows = ['H','K','L','M','C5','K4','K5']
-#shadows = ['six_arcs'+str(k) for k in range(604)]
-
 
 rule all:
     input:
@@ -15,7 +13,7 @@ rule all:
 #        expand('results/colored_dbn/band_diagram_{shadow}.pdf',shadow=shadows),
 #        expand('results/compact_td_images/compact_{shadow}.pdf',shadow=shadows),
 #        expand('results/compact_td_images/compact_{shadow}_letters.pdf',shadow=shadows),
-##        expand('results/compact_td_images/compact_{shadow}_equations.pdf',shadow=shadows),
+#        expand('results/compact_td_images/compact_{shadow}_equations.pdf',shadow=shadows),
         expand('results/latex_equations/{shadow}_latex_equations.pdf',shadow=shadows),
 #        expand('results/concatenations/concatenation_{shadow}.pdf',shadow=shadows),
         'results/state_of_the_results.pdf'
@@ -36,7 +34,6 @@ rule decomposition_scheme:
         'results/decomposition_schemes/decomposition_{family}.tex'
     script:
         'scripts/display_decomposition_scheme.py'
-        
 
 rule pdflatex_equations:
     input:
