--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -4,6 +4,7 @@ shadows = ['H','K','L','M','C5','K4','K5']
 
 rule all:
     input:
+        expand('results/processed_td_files/processed_{family}.td', family=shadows),
 #        expand('results/td_files/{shadow}.td', shadow=shadows)
 #        expand('results/elim_order/{shadow}.order', shadow=shadows),
 #        expand('results/td_images/processed_{shadow}.pdf', shadow=shadows),
@@ -15,8 +16,9 @@ rule all:
 #        expand('results/compact_td_images/compact_{shadow}_letters.pdf',shadow=shadows),
 #        expand('results/compact_td_images/compact_{shadow}_equations.pdf',shadow=shadows),
         expand('results/latex_equations/{shadow}_latex_equations.pdf',shadow=shadows),
+        expand('results/binaries/{shadow}_folding',shadow=shadows)
 #        expand('results/concatenations/concatenation_{shadow}.pdf',shadow=shadows),
-        'results/state_of_the_results.pdf'
+#        'results/state_of_the_results.pdf'
 
 rule state_of_the_results:
     input:
@@ -25,6 +27,14 @@ rule state_of_the_results:
         'results/state_of_the_results.pdf'
     shell:
         'pdftk {input} cat output {output}'
+
+rule c_compilation:
+    input:
+        'results/c_code/{family}_folding.c'
+    output:
+        'results/binaries/{family}_folding'
+    shell:
+        'gcc {input} -o {output}'
 
 rule decomposition_scheme:
     input:
@@ -42,6 +52,16 @@ rule pdflatex_equations:
         'results/latex_equations/{shadow}_latex_equations.pdf'
     shell:
         'pdflatex -output-directory=results/latex_equations/ {input}'
+
+rule produce_c_code:
+    input:
+        tdname='results/processed_td_files/processed_{family}.td',
+        helix='results/helix_annotations/{family}.helix'
+    output:
+        'results/c_code/{family}_folding.c'
+    script:
+        'scripts/produce_c_code.py'
+        
 
 rule produce_latex_equations:
     input:
@@ -62,7 +82,7 @@ rule extremities_label:
     output:
         'results/json_files/extremities_label_{family}.json'
     run:
-        from equation_tree import TreeOfEquations
+        from autodp.equation_tree import TreeOfEquations
 
         eq_tree = TreeOfEquations()
         eq_tree.read_from_file(input.tdname)
