--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,6 +1,6 @@
 configfile: "config/config.json"
 
-shadows = ['H','K','L','M','C5','K4','K5']
+shadows = ['H','H2','K','L','M','C5','K4','K5']
 
 rule all:
     input:
@@ -16,7 +16,7 @@ rule all:
         expand('results/compact_td_images/compact_{shadow}_letters.pdf',shadow=shadows),
 #        expand('results/compact_td_images/compact_{shadow}_equations.pdf',shadow=shadows),
         expand('results/latex_equations/{shadow}_latex_equations.pdf',shadow=shadows),
-#        expand('results/binaries/{shadow}_folding',shadow=shadows),
+        expand('results/binaries/{shadow}_folding',shadow=shadows),
         expand('results/concatenations/concatenation_{shadow}.pdf',shadow=shadows),
         'results/state_of_the_results.pdf'
 
