paper submission update (probably, commited long after)

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -12,8 +12,8 @@ rule all:
         expand('results/td_images/unprocessed_{shadow}.pdf', shadow=shadows),
         expand('results/colored_dbn/colored_dbn_{shadow}.pdf',shadow=shadows),
         expand('results/colored_dbn/band_diagram_{shadow}.pdf',shadow=shadows),
-        expand('results/compact_td_images/compact_{shadow}.pdf',shadow=shadows),
-        expand('results/compact_td_images/compact_{shadow}_letters.pdf',shadow=shadows),
+#        expand('results/compact_td_images/compact_{shadow}.pdf',shadow=shadows),
+#        expand('results/compact_td_images/compact_{shadow}_letters.pdf',shadow=shadows),
 #        expand('results/compact_td_images/compact_{shadow}_equations.pdf',shadow=shadows),
         expand('results/latex_equations/{shadow}_latex_equations.pdf',shadow=shadows),
         expand('results/binaries/{shadow}_folding',shadow=shadows),
